--- a/docs/output.css
+++ b/docs/output.css
@@ -1241,6 +1241,14 @@ input:checked + .toggle-bg {
   min-width: 80px;
 }
 
+.min-w-\[110px\] {
+  min-width: 110px;
+}
+
+.min-w-\[120px\] {
+  min-width: 120px;
+}
+
 .max-w-screen-xl {
   max-width: 1280px;
 }
